--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@prisma/client": "^6.7.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "multer": "^2.0.0",
+    "path": "^0.12.7",
     "puppeteer": "^24.8.0",
     "zod": "^3.24.4"
   },
